# django-relatives

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  justfile  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile  api.rst  change.rst  changelist.rst  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
relatives/: __init__.py  compat.py  model_admin.py  template_helpers.py  utils.py
relatives/static/css/: relatives.css
relatives/templates/relatives/: change_form.html
relatives/templates/relatives/includes/: fieldset.html
relatives/templatetags/: relatives.py
relatives/tests/: admin.py  models.py  tests.py  urls.py
relatives/tests/migrations/: 0001_initial.py  0002_shape.py  0003_auto_20210927_1618.py  0004_eater_meal.py  0005_alter_meal_reviewed.py
relatives/tests/templates/: related_objects_fk_test.html  related_objects_generic_test.html  related_objects_test.html
relatives/tests/templates/admin/includes/: fieldset.html
